--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 .header__container::before {
   content: "";
   height: 400px;
-  width: 1200px;
+  max-width: 1200px;
   background-color: #103240;
   position: absolute;
   top: 100px;
