--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,9 @@ body {
 .header__container::before {
   content: "";
   height: 400px;
-  max-width: 1200px;
+  /* width: 500px; */
+  width: 100%;
+  max-width: 500px;
   background-color: #103240;
   position: absolute;
   top: 100px;
