--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
   min-height: calc(100vh - 60px);
-  background-color: #444;
+  background-color: #111;
   color: #f4f4f4;
   font-family: 'Shippori Mincho B1', serif;
 }
@@ -27,6 +27,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 10;
 }
 
 .nav__list {
@@ -92,7 +93,7 @@ body {
   text-align: center;
 }
 
-.estudios__container {
+.estudios__container, .skills__container {
   height: 500px;
   width: 900px;
   margin: 30px;
@@ -102,10 +103,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  /* z-index: 1; */
+  /* z-index: 0; */
 }
 
-.estudios__container::before {
+.estudios__container::before, .skills__container::before {
   content: "";
   width: 110px;
   height: 110px;
@@ -121,7 +122,7 @@ body {
   z-index: -1;
 }
 
-.estudios__container::after {
+.estudios__container::after, .skills__container::after {
   content: "";
   width: 110px;
   height: 110px;
@@ -240,4 +241,74 @@ body {
   left: 50%;
   transform: translate(-100%, 0);
 }
+
+.skills__container {
+  height: 640px;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 20px;
+  flex-wrap: wrap;
+}
+
+.circular__container {
+  height: 280px;
+  width: calc(100% / 3.3);
+  background-color: #111;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  border-radius: 5px;
+}
+
+.circular {
+  width: 150px;
+  height: 150px;
+  position: relative;
+}
+
+.circular__svg {
+  /* width: 100%; */
+  width: 150px;
+  transform: rotate(-90deg);
+  /* border: 1px solid yellow; */
+}
+
+.circular__svg circle{
+  width: 100%;
+  height: 100%;
+  fill: none;
+  stroke-width: 10;
+  stroke-linecap: square;
+  transform: translate(5px, 5px);
+  stroke-dasharray: 440;
+  stroke-dashoffset: 440;
+}
+
+.circular__svg circle:nth-child(1) {
+  stroke-dashoffset: 0;
+  stroke: #f3f3f371;
+}
+
+.circular__svg circle:nth-child(2){
+  stroke-width: 11;
+  stroke: orange;
+  stroke-dashoffset: 220;
+}
+
+.logo {
+  height: calc(100% - 21px);
+  width: calc(100% - 21px);
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  left: 11px;
+}
+
+
+
+
+
 
