--- a/css/style.css
+++ b/css/style.css
@@ -270,15 +270,12 @@ body {
 }
 
 .circular__svg {
-  /* width: 100%; */
-  width: 150px;
+  width: 153px;
+  height: 153px;
   transform: rotate(-90deg);
-  /* border: 1px solid yellow; */
 }
 
-.circular__svg circle{
-  width: 100%;
-  height: 100%;
+.circular__svg circle {
   fill: none;
   stroke-width: 10;
   stroke-linecap: square;
@@ -295,17 +292,23 @@ body {
 .circular__svg circle:nth-child(2){
   stroke-width: 11;
   stroke: orange;
-  stroke-dashoffset: 220;
+  transition: stroke-dashoffset 1s linear;
 }
 
 .logo {
-  height: calc(100% - 21px);
+  height: calc(100% - 20px);
   width: calc(100% - 21px);
   border-radius: 50%;
   position: absolute;
-  top: 10px;
-  left: 11px;
+  top: 13px;
+  left: 10px;
 }
+
+/* @keyframes mover{
+  100% {
+      stroke-dashoffset: 300;
+  }
+} */
 
 
 
