--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,13 @@ body {
 }
 
 .nav__link:hover {
-  color: #E32209;
+  color: #D3FF24;
+  text-shadow: 0px 0px 5px #D3FF24;
 }
 
 .nav__link.selected {
-  color: #E32209;
+  color: #D3FF24;
+  text-shadow: 0px 0px 5px #D3FF24;
 }
 
 .header__inicio {
@@ -64,14 +66,18 @@ body {
   height: 500px;
   padding: 0 5vw;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
 .header__inicio h1{
+  max-width: 1440px;
+  height: 100%;
+  flex: 1;
   color: #f4f4f4;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   font-size: 80px;
   font-weight: 800;
 }
@@ -80,9 +86,8 @@ body {
   color: transparent;
   font-size: 90px;
   background-image: linear-gradient(
-    #16A1F2,
-    #40F2FE,
-    #f4f4f4
+    #D3FF24,
+    #EBF227
   );
   -webkit-background-clip: text;
 }
@@ -122,8 +127,8 @@ body {
   top: -7px;
   left: -7px;
   background-image: linear-gradient(
-    #E32209,
-    #ff5100
+    #17FF36,
+    #BCFF20
     );
   /* transform: translate(-7px, -7px); */
   z-index: -1;
@@ -138,8 +143,8 @@ body {
   bottom: -7px;
   right: -7px;
   background-image: linear-gradient(
-    #ff5100,
-    #E32209
+    #BCFF20,
+    #17FF36
     );
   /* transform: translate(7px, 7px); */
   z-index: -1;
@@ -320,9 +325,9 @@ body {
 
 
 @media(min-width: 1440px){
-  .header__inicio {
+  /* .header__inicio {
     padding: 0 calc(100vw - 1440px);
-  }
+  } */
 }
 
 
