--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap');
+:root {
+  --colorPrincipal: #EBF227;
+}
 
 *{
   margin: 0;
@@ -50,13 +53,13 @@ body {
 }
 
 .nav__link:hover {
-  color: #D3FF24;
-  text-shadow: 0px 0px 5px #D3FF24;
+  color: var(--colorPrincipal);;
+  text-shadow: 0px 0px 5px var(--colorPrincipal);;
 }
 
 .nav__link.selected {
-  color: #D3FF24;
-  text-shadow: 0px 0px 5px #D3FF24;
+  color: var(--colorPrincipal);;
+  text-shadow: 0px 0px 5px var(--colorPrincipal);;
 }
 
 .header__inicio {
@@ -165,7 +168,7 @@ body {
   content: "";
   width: 100%;
   height: 5px;
-  background-color: red;
+  background-color: var(--colorPrincipal);
   position: relative;
 }
 
@@ -174,7 +177,7 @@ body {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  border: 1px solid red;
+  border: 1px solid var(--colorPrincipal);
   position: absolute;
   top: 50%;
   left: 0;
@@ -186,7 +189,7 @@ body {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  border: 1px solid red;
+  border: 1px solid var(--colorPrincipal);
   position: absolute;
   top: 50%;
   right: 0;
@@ -222,7 +225,7 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: red;
+  background-color: var(--colorPrincipal);
   position: absolute;
   bottom: -17.5px;
   left: 50%;
