--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1:wght@400;500;600;700;800&display=swap');
 :root {
-  --colorPrincipal: #EBF227;
+  --colorPrincipal: #D3FF24;
+  --colorSecundario: #EBF227;
 }
 
 *{
@@ -28,6 +29,7 @@ body {
   height: 60px;
   width: 100%;
   background-color: #111;
+  box-shadow: 1px 0px 5px #111;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,12 +56,12 @@ body {
 
 .nav__link:hover {
   color: var(--colorPrincipal);;
-  text-shadow: 0px 0px 5px var(--colorPrincipal);;
+  text-shadow: 0px 0px 7px var(--colorPrincipal);;
 }
 
 .nav__link.selected {
   color: var(--colorPrincipal);;
-  text-shadow: 0px 0px 5px var(--colorPrincipal);;
+  text-shadow: 0px 0px 7px var(--colorPrincipal);;
 }
 
 .header__inicio {
@@ -69,30 +71,57 @@ body {
   height: 500px;
   padding: 0 5vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  gap: 10px;
 }
 
-.header__inicio h1{
+.header__inicio>p{
   max-width: 1440px;
-  height: 100%;
-  flex: 1;
   color: #f4f4f4;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   font-size: 80px;
   font-weight: 800;
+  position: relative;
+  /* border: 5px solid #f4f4f460; */
 }
 
-.header__inicio h1 span{
+.header__inicio>p::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 20px;
+  filter: blur(10px);
+  background-color: #ffffff10;
+}
+
+.header__inicio>h1{
   color: transparent;
   font-size: 90px;
   background-image: linear-gradient(
-    #D3FF24,
-    #EBF227
+    #D3FF24 80%,
+    #FFDE17
   );
+  /* border: 5px solid #f4f4f460; */
   -webkit-background-clip: text;
+  position: relative;
+}
+
+.header__inicio>h1::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  border-radius: 20px;
+  filter: blur(10px);
+  background-color: #ffffff10;
 }
 
 .main {
