--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .header__nav {
-  height: 60px;
+  height: 70px;
   width: 100%;
   background-color: #111;
   box-shadow: 1px 0px 5px #111;
@@ -37,6 +37,7 @@ body {
   top: 0;
   left: 0;
   z-index: 10;
+  transition: all 0.3s linear;
 }
 
 .nav__list {
@@ -65,8 +66,10 @@ body {
 }
 
 .header__inicio {
-  background-image: url("../img/back1.png");
-  background-position: 15px;
+  background-image: url("../images/back1.png");
+  background-position-y: center;
+  filter: brightness(1.1), saturate(1.5);
+  background-repeat: no-repeat;
   margin-top: 60px;
   height: 500px;
   padding: 0 5vw;
@@ -77,19 +80,19 @@ body {
   gap: 10px;
 }
 
-.header__inicio>p{
+.header__inicio>h1{
   max-width: 1440px;
   color: #f4f4f4;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   font-size: 80px;
   font-weight: 800;
-  position: relative;
-  border-radius: 5px;
-  border: 1px solid #f4f4f420;
+  text-shadow: 0px 0px 5px #f4f4f4;
+  /* position: relative; */
 }
 
-.header__inicio>p::before {
+/* .header__inicio>p::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -97,23 +100,17 @@ body {
   top: 0px;
   left: 0px;
   border-radius: 5px;
-  filter: blur(10px);
+  filter: blur(20px);
   background-color: #ffffff10;
-}
+} */
 
-.header__inicio>h1{
-  color: transparent;
+.header__inicio>h1>span{
+  color: var(--colorPrincipal);
   font-size: 90px;
-  background-image: linear-gradient(
-    #D3FF24 80%,
-    #FFDE17
-  );
-  -webkit-background-clip: text;
+  text-shadow: 0px 0px 7px var(--colorPrincipal);
   position: relative;
-  border-radius: 5px;
-  border: 1px solid #f4f4f460;
 }
-
+/* 
 .header__inicio>h1::before {
   content: "";
   width: 100%;
@@ -121,10 +118,10 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  border-radius: 5px;
-  filter: blur(10px);
+  border-radius: 25px;
+  filter: blur(20px);
   background-color: #ffffff10;
-}
+} */
 
 .main {
   display: flex;
@@ -139,7 +136,7 @@ body {
   text-align: center;
 }
 
-.estudios__container, .skills__container {
+.estudios__container {
   height: 500px;
   width: 900px;
   margin: 30px;
@@ -152,7 +149,8 @@ body {
   /* z-index: 0; */
 }
 
-.estudios__container::before, .skills__container::before {
+
+.estudios__container::before {
   content: "";
   width: 110px;
   height: 110px;
@@ -168,7 +166,7 @@ body {
   z-index: -1;
 }
 
-.estudios__container::after, .skills__container::after {
+.estudios__container::after {
   content: "";
   width: 110px;
   height: 110px;
@@ -289,9 +287,12 @@ body {
 }
 
 .skills__container {
+  width: 900px;
   height: 640px;
+  display: flex;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: center;
   gap: 20px;
   padding: 30px;
   flex-wrap: wrap;
@@ -300,18 +301,24 @@ body {
 .circular__container {
   height: 280px;
   width: calc(100% / 3.3);
-  background-color: #111;
+  background-color: #11111120;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 15px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
+  /* background: rgba( 255, 255, 255, 0.20 ); */
+  box-shadow: 0 8px 32px 0 #A61F1F30;
+  backdrop-filter: blur( 10.0px );
+  -webkit-backdrop-filter: blur( 10.0px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .circular {
-  width: 150px;
-  height: 150px;
+  width: 153px;
+  height: 153px;
   position: relative;
 }
 
@@ -337,13 +344,25 @@ body {
 
 .circular__svg circle:nth-child(2){
   stroke-width: 11;
-  stroke: orange;
-  transition: stroke-dashoffset 1s linear;
+  stroke: #D94625;
+  transition: stroke-dashoffset 1.5s ease-out;
+}
+
+.circular__container:nth-child(2) circle:nth-child(2) {
+  stroke: #1C88C7;
+}
+
+.circular__container:nth-child(3) circle:nth-child(2) {
+  stroke: #BFAB49;
+}
+
+.circular__container:nth-child(4) circle:nth-child(2) {
+  stroke: #44D2F2;
 }
 
 .logo {
-  height: calc(100% - 20px);
-  width: calc(100% - 21px);
+  height: calc(100% - 22px);
+  width: calc(100% - 22px);
   border-radius: 50%;
   position: absolute;
   top: 13px;
