--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,8 @@ body {
   background-image: linear-gradient(
     #17FF36,
     #BCFF20
-    );
+  );
+  box-shadow: 0px 0px 7px #BCFF20;
   /* transform: translate(-7px, -7px); */
   z-index: -1;
 }
@@ -177,7 +178,8 @@ body {
   background-image: linear-gradient(
     #BCFF20,
     #17FF36
-    );
+  );
+  box-shadow: 0px 0px 7px #BCFF20;
   /* transform: translate(7px, 7px); */
   z-index: -1;
 }
