--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
 :root {
-  --colorPrincipal: #D3FF24;
+  --colorPrincipal: #a4f041;
   --colorSecundario: #EBF227;
 }
 
