--- a/css/styles.css
+++ b/css/styles.css
@@ -421,6 +421,9 @@ body {
 
 .proyectos__container{
   height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .contacto__container {
